Fixed inconsistency with menu button position on mobile.

--- a/app/assets/stylesheets/boards.css.scss
+++ b/app/assets/stylesheets/boards.css.scss
@@ -348,7 +348,7 @@
 	.header-container .sidebar-content .fa {
 		display: block;
 		float: left;
-		line-height: 24px;
+		line-height: 20px;
 	}
 
 	#search-filter.active .header-container .header-container-logo .fa {
@@ -397,7 +397,7 @@
 
 	.search-field-container {
 		& img {
-			left: $spacing-2;
+			left: $spacing-1;
 			top: 0px;
 		}
 		& .search-field {
@@ -468,7 +468,7 @@
 	.sidebar-content,
 	.sidebar-content-fixed,
 	.search-field-container {
-		padding: 0 $spacing-2;
+		padding: 0 $spacing-1;
 	}
 
 	.sidebar-content-fixed {
